propagations, debugging, some javadoc, refactor